Changelog
=========


2.0.2 (unreleased)
------------------

- Nothing changed yet.


2.0.1 (2014-01-02)
------------------

- Fix encoding error when transforming HTML to text.
  [jone]


2.0 (2013-03-16)
----------------

- Drop Plone 4.1 support.
  [jone]

- Mark title and description of p.a.dexterity's IBasic
  as searchable by default.
  [jone]

- Add a no_longer_searchable utility function.
  [jone]

- Plone 4.3 support.
  [jone]

- Eliminate grok / martian dependencies in favor of the new plone.supermodel directives. #5
  [jone]


1.5.1 (2013-02-20)
------------------

- Do not try to convert text/plain in files, just index it as it is.
  [zupo]


1.5 (2012-08-16)
----------------

- Fix missing field bug. #3

  - Log an error when indexing an object and one of its schemas defines a missing
    field as searchable.

  - Make sure that indexing other existing fields of the same schema works.

  - searchable utils function: raise AttributeError when field is missing.

  [jone]

- Added support for marking fields searchable in plone.supermodel XML models.
  This is done by implementing a IFieldMetadataHandler that is capable of
  serializing/de-serializing the corresponding taggedValue to/from XML.
  [lgraf]

- Add ``utils.searchable`` method for marking fields of third party schemas as searchable.
  [kagesenshi]


1.4.1 (2011-11-17)
------------------

- ignore the request in the get_field_widget method, to avoid problems with request variables wich have the same name than the field.
  [phgross]

- Added test-buildout for plone-4.1.x
  [lgraf]


1.4 (2011-08-24)
----------------

- Added IntFieldConverter, wich return the plain value instead of the render method (600000 --> 600,000)
  [phgross]


1.3
---

- Fixed querying of tagged values: use helper function mergedTaggedValueList - which also looks
  up tagged values on superclasses.
  [jbaumann]

- Fixed html to text transform call: added source mimetype.
  [jbaumann]


1.2
---
